# mempatch

./: .gitignore  CMakeLists.txt  Entitlements.plist  LICENSE  README.md
.github/: pull_request_template.md
jni/: Address.cpp  Address.h  Android.mk  CMakeLists.txt  ChangeString.cpp  ChangeString.h  Config.h  Converter.cpp  Converter.h  FreezeThread.cpp  FreezeThread.h  LineReader.cpp  LineReader.h  LineReader_Windows.cpp  Memory.h  Memory_Darwin.mm  Memory_Linux.cpp  Memory_Windows.cpp  Patcher.cpp  Patcher.h  Ptrace.cpp  Ptrace.h  SnappedRange.cpp  SnappedRange.h  Snapshot.h  Utility.cpp  Utility.h  getopt.cpp  getopt.h  main.cpp
jni/linenoise/: linenoise.cpp  linenoise.hpp
jni/test/: VictimJavaAscii.java  victim_ascii.cpp  victim_int.cpp  victim_mass.cpp
other-LICENSES/: cpp-linenoise-LICENSE
